SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/CPQ_System_Settings__c.object-meta.xml
<CustomObject>
    <description>CPQ System Configuration Settings</description>
    <label>CPQ System Settings</label>
    <nameField>
        <label>CPQ System Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ System Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>