SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/fields/Contract_Table_Actions__c.field-meta.xml
<CustomField>
    <fullName>Contract_Table_Actions__c</fullName>
    <description>Contract actions CPQ users have available</description>
    <inlineHelpText>Contract actions CPQ users have available</inlineHelpText>
    <label>Contract Table Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Amend</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>