SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/fields/Contract_Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Contract_Table_Columns__c</fullName>
    <description>Semicolon delineated list of field API names on the Contract object to be shown in the Contract Table view in CPQ. Any Contract Field API names are supported.</description>
    <inlineHelpText>Semicolon delineated list of field API names on the Contract object to be shown in the Contract Table view in CPQ. Any Contract Field API names are supported.</inlineHelpText>
    <label>Contract Table Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>