SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/fields/Default_Playbook__c.field-meta.xml
<CustomField>
    <fullName>Default_Playbook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default playbook to be used when creating a new quote</description>
    <inlineHelpText>Default playbook to be used when creating a new quote</inlineHelpText>
    <label>Default Playbook</label>
    <referenceTo>CPQ_Playbook__c</referenceTo>
    <relationshipLabel>CPQ System Settings</relationshipLabel>
    <relationshipName>CPQ_System_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>