SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/fields/Quote_Table_Actions__c.field-meta.xml
<CustomField>
    <fullName>Quote_Table_Actions__c</fullName>
    <description>Quote actions CPQ users have available</description>
    <inlineHelpText>Quote actions CPQ users have available</inlineHelpText>
    <label>Quote Table Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
                <label>Propsosal</label>
            </value>
            <value>
                <fullName>Clone</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>