SFDC_LD_Packages/CPQ/main/default/objects/CPQ_System_Settings__c/fields/Quote_Table_Columns__c.field-meta.xml
<CustomField>
    <fullName>Quote_Table_Columns__c</fullName>
    <description>Semicolon delineated list of field API names on the Quote object to be shown in the Quote Table view in CPQ. Any Quote Field API names are supported.</description>
    <inlineHelpText>Semicolon delineated list of field API names on the Quote object to be shown in the Quote Table view in CPQ. Any Quote Field API names are supported.</inlineHelpText>
    <label>Quote Table Columns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>